--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,17 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/pandabobo.jpg
+    - images/google.png
+    - images/background.jpg
+    - images/logo.png
+    - images/sidedish.jpg
+    - images/bakmie.jpg
+    - images/nasi.jpg
+    - images/minum.jpg
+    - images/mielebarfav.jpg
+    - images/nascamhai.jpg
+    - images/badak.jpg
+    - images/esteh.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -71,18 +81,18 @@ flutter:
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  # # example:
+  fonts:
+    - family: Satisfy
+      fonts:
+        - asset: assets/Satisfy-Regular.ttf
+    - family: Mulish
+      fonts:
+        - asset: assets/Mulish-Regular.ttf
+    - family: MulishBold
+      fonts:
+        - asset: assets/Mulish-Bold.ttf
+        
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
